--- a/packages/image_picker/image_picker_android/android/build.gradle
+++ b/packages/image_picker/image_picker_android/android/build.gradle
@@ -28,14 +28,38 @@ android {
     defaultConfig {
         minSdkVersion 19
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        
+        // Add ProGuard rules for release builds
+        consumerProguardFiles 'proguard-rules.pro'
     }
+    
+    // Special configuration for Android 15 compatibility
+    buildTypes {
+        release {
+            minifyEnabled true
+            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+            
+            // Disable R8 full mode to prevent FileProvider issues on Android 15
+            buildConfigField "boolean", "DISABLE_R8_FULL_MODE", "true"
+            
+            // Add special flags for Android 15 compatibility
+            buildConfigField "boolean", "ENABLE_FILEPPROVIDER_COMPAT", "true"
+        }
+        
+        debug {
+            minifyEnabled false
+            // Keep the FileProvider classes even in debug mode
+            proguardFiles 'proguard-rules.pro'
+        }
+    }
+    
     lintOptions {
         checkAllWarnings true
         warningsAsErrors true
         disable 'AndroidGradlePluginVersion', 'InvalidPackage', 'GradleDependency', 'NewerVersionAvailable'
     }
     dependencies {
-        implementation 'androidx.core:core:1.13.1'
+        implementation 'androidx.core:core:1.13.3'
         implementation 'androidx.annotation:annotation:1.9.1'
         implementation 'androidx.exifinterface:exifinterface:1.3.7'
         implementation 'androidx.activity:activity:1.9.3'
@@ -44,6 +68,18 @@ android {
         testImplementation 'org.mockito:mockito-core:5.1.1'
         testImplementation 'androidx.test:core:1.4.0'
         testImplementation "org.robolectric:robolectric:4.10.3"
+    }
+
+    configurations.all {
+        resolutionStrategy {
+            force 'androidx.core:core:1.13.3'
+            // Ensure all androidx libraries use compatible versions
+            eachDependency { details ->
+                if (details.requested.group == 'androidx.core') {
+                    details.useVersion '1.13.3'
+                }
+            }
+        }
     }
 
     compileOptions {
