--- a/packages/image_picker/image_picker_android/android/build.gradle
+++ b/packages/image_picker/image_picker_android/android/build.gradle
@@ -35,7 +35,7 @@ android {
         disable 'AndroidGradlePluginVersion', 'InvalidPackage', 'GradleDependency', 'NewerVersionAvailable'
     }
     dependencies {
-        implementation 'androidx.core:core:1.13.1'
+        implementation 'androidx.core:core:1.13.3'
         implementation 'androidx.annotation:annotation:1.9.1'
         implementation 'androidx.exifinterface:exifinterface:1.3.7'
         implementation 'androidx.activity:activity:1.9.3'
@@ -44,6 +44,18 @@ android {
         testImplementation 'org.mockito:mockito-core:5.1.1'
         testImplementation 'androidx.test:core:1.4.0'
         testImplementation "org.robolectric:robolectric:4.10.3"
+    }
+
+    configurations.all {
+        resolutionStrategy {
+            force 'androidx.core:core:1.13.3'
+            // Ensure all androidx libraries use compatible versions
+            eachDependency { details ->
+                if (details.requested.group == 'androidx.core') {
+                    details.useVersion '1.13.3'
+                }
+            }
+        }
     }
 
     compileOptions {
